feat: simple service implementation, no MultiTenancy. All products seen by any authenticated user
